--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p class="titulos"><b>RESULTADO</b></p>
                 <textarea id="resultado"  class="contenedorResultado"> </textarea>
                 <button id="copiarTex" class="boton1" onclick="copiar()">Copiar</button>
-                <img id="imagen" src="Muñeco.png" alt="Imagen" style="width: 100%; height: auto;">
+                <img id="imagen" src="Muñeco.png" alt="Imagen">
                 <p id="mensajeAdv" class="titulos"><b>Ningun mensaje fue encontrado</b></p>
                 <p id="mensajeAdv2">Ingresa el texto que deseas encriptar o desencriptar</p>
             </div>
